# fincli

./: .gitignore  Cargo.toml  LICENSE  README.md  finance_functions.py  fincli.py  fincli_cache.py  go.mod  go.sum  portfolio.json  portfolio.py  rich_functions.py  ticker.py  typer_functions.py
cmd/fincli/: main.go
internal/cache/: cache.go  cache_test.go
internal/cli/: portfolio.go  root.go  ticker.go
internal/display/: table.go  table_test.go  theme.go
internal/finance/: client.go  ticker.go  types.go
internal/portfolio/: loader.go  loader_test.go  portfolio.go
src/: cache.rs  cli.rs  display.rs  finance.rs  main.rs  portfolio.rs
